--- a/todolist/src/App.css
+++ b/todolist/src/App.css
@@ -1,3 +1,15 @@
+.delbutton{
+  color: red;
+  background-color: white;
+  border: 1px solid red;
+  border-radius: 5px;
+  margin: 10px 20px;
+  padding: 5px 10px;
+  font-weight: bold;
+  text-align: center;
+
+}
+
 .board{
   background-color: white;
   border-radius: 8px;
